Libraries/GTK/src/gtkextra/gtkplot.h

typedef struct _GtkPlot		GtkPlot;
typedef struct _GtkPlotAxis 	GtkPlotAxis;
typedef struct _GtkPlotLine 	GtkPlotLine;
typedef enum
{
  GTK_PLOT_SCALE_LINEAR	,
  GTK_PLOT_SCALE_LOG10
} GtkPlotScale;
typedef enum
{
  GTK_PLOT_AXIS_X	,
  GTK_PLOT_AXIS_Y	,
  GTK_PLOT_AXIS_Z	,
} GtkPlotOrientation;
void            gtk_plot_set_ticks         	(GtkPlot *plot,
					     GtkPlotOrientation orientation,
					     gdouble major_step,
                                                 gint nminor);
void            gtk_plot_set_major_ticks   	(GtkPlot *plot,
					     GtkPlotOrientation orientation,
					     gdouble major_step);
void            gtk_plot_set_minor_ticks   	(GtkPlot *plot,
					     GtkPlotOrientation orientation,
					     gint nminor);
void            gtk_plot_set_ticks_limits  	(GtkPlot *plot,
					     GtkPlotOrientation orientation,
 					     gdouble begin, gdouble end);
void            gtk_plot_unset_ticks_limits(GtkPlot *plot,
                                                 GtkPlotOrientation orientation);
void            gtk_plot_set_break         	(GtkPlot *plot,
                                                 GtkPlotOrientation orient,
                                                 gdouble min, gdouble max,
                                                 gdouble step_after,
                                                 gint nminor_after,
                                                 GtkPlotScale scale_after,
                                                 gdouble pos);
void            gtk_plot_remove_break      	(GtkPlot *plot,
                                                 GtkPlotOrientation orient);
void 		gtk_plot_axis_ticks_recalc      (GtkPlotAxis *axis);
gdouble 	gtk_plot_axis_ticks_transform   (GtkPlotAxis *axis,
						 gdouble y);
gdouble 	gtk_plot_axis_ticks_inverse     (GtkPlotAxis *axis,
						 gdouble x);
void 		gtk_plot_axis_parse_label       (GtkPlotAxis *axis,
						 gdouble val,
                                         	 gint precision,
                                         	 gint style,
                                         	 gchar *label);
void 		gtk_plot_set_line_attributes    (GtkPlot *plot,
                                                 GtkPlotLine line);