Libraries/GTK/src/gtk-extra-plot.adb


   procedure Set_Line_Attributes
     (Plot : access Gtk_Plot_Record;
      Line : Gtk_Plot_Line)
   is
      procedure Internal (Plot : System.Address; Line : Gtk_Plot_Line);
      pragma Import (C, Internal, "gtk_plot_set_line_attributes");
   begin
      Internal (Get_Object (Plot), Line);
   end Set_Line_Attributes;

   ---------------
   -- Set_Ticks --
   ---------------

   procedure Set_Ticks
     (Plot        : access Gtk_Plot_Record;
      Orientation : Plot_Orientation;
      Major_Step  : Gdouble;
      Num_Minor   : Gint)
   is
      procedure Internal
        (Plot : System.Address;
         Orientation : Plot_Orientation;
         Major : Gdouble;
         Minor : Gint);
      pragma Import (C, Internal, "gtk_plot_set_ticks");
   begin
      Internal (Get_Object (Plot), Orientation, Major_Step, Num_Minor);
   end Set_Ticks;

   ---------------------
   -- Set_Major_Ticks --
   ---------------------

   procedure Set_Major_Ticks
     (Plot        : access Gtk_Plot_Record;
      Orientation : Plot_Orientation;
      Major_Step  : Gdouble)
   is
      procedure Internal
        (Plot : System.Address;
         Orientation : Plot_Orientation;
         Major : Gdouble);
      pragma Import (C, Internal, "gtk_plot_set_major_ticks");
   begin
      Internal (Get_Object (Plot), Orientation, Major_Step);
   end Set_Major_Ticks;

   ---------------------
   -- Set_Minor_Ticks --
   ---------------------

   procedure Set_Minor_Ticks
     (Plot        : access Gtk_Plot_Record;
      Orientation : Plot_Orientation;
      Num_Minor   : Gint)
   is
      procedure Internal
        (Plot : System.Address; Orient : Plot_Orientation; Minor : Gint);
      pragma Import (C, Internal, "gtk_plot_set_minor_ticks");
   begin
      Internal (Get_Object (Plot), Orientation, Num_Minor);
   end Set_Minor_Ticks;

   ----------------------
   -- Set_Ticks_Limits --
   ----------------------

   procedure Set_Ticks_Limits
     (Plot        : access Gtk_Plot_Record;
      Orientation : Plot_Orientation;
      Ticks_Begin : Gdouble;
      Ticks_End   : Gdouble)
   is
      procedure Internal
        (Plot : System.Address; Orient : Plot_Orientation; B, E : Gdouble);
      pragma Import (C, Internal, "gtk_plot_set_ticks_limits");
   begin
      Internal (Get_Object (Plot), Orientation, Ticks_Begin, Ticks_End);
   end Set_Ticks_Limits;

   ------------------------
   -- Unset_Ticks_Limits --
   ------------------------

   procedure Unset_Ticks_Limits
     (Plot        : access Gtk_Plot_Record;
      Orientation : Plot_Orientation)
   is
      procedure Internal (Plot : System.Address; Orient : Plot_Orientation);
      pragma Import (C, Internal, "gtk_plot_unset_ticks_limits");
   begin
      Internal (Get_Object (Plot), Orientation);
   end Unset_Ticks_Limits;

   ---------------
   -- Set_Break --
   ---------------

   procedure Set_Break
     (Plot         : access Gtk_Plot_Record;
      Orient       : Plot_Orientation;
      Min, Max     : Gdouble;
      Step_After   : Gdouble;
      Nminor_After : Gint;
      Scale_After  : Plot_Scale;
      Pos          : Gdouble)
   is
      procedure Internal
        (Plot : System.Address;
         Orien : Plot_Orientation;
         Min, Max, Step : Gdouble;
         Minor : Gint;
         Scale : Plot_Scale;
         Pos   : Gdouble);
      pragma Import (C, Internal, "gtk_plot_set_break");
   begin
      Internal (Get_Object (Plot), Orient, Min, Max, Step_After,
                Nminor_After, Scale_After, Pos);
   end Set_Break;

   ------------------
   -- Remove_Break --
   ------------------

   procedure Remove_Break
     (Plot : access Gtk_Plot_Record; Orient : Plot_Orientation)
   is
      procedure Internal (Plot : System.Address; Orient : Plot_Orientation);
      pragma Import (C, Internal, "gtk_plot_remove_break");
   begin
      Internal (Get_Object (Plot), Orient);
   end Remove_Break;

   -----------------------
   -- Axis_Ticks_Recalc --
   -----------------------

   procedure Axis_Ticks_Recalc (Axis : access Gtk_Plot_Axis_Record) is
      procedure Internal (Axis : System.Address);
      pragma Import (C, Internal, "gtk_plot_axis_ticks_recalc");
   begin
      Internal (Get_Object (Axis));
   end Axis_Ticks_Recalc;

   --------------------------
   -- Axis_Ticks_Transform --
   --------------------------

   function Axis_Ticks_Transform
     (Axis : access Gtk_Plot_Axis_Record;
      Y    : Gdouble) return Gdouble
   is
      function Internal (Axis : System.Address; Y : Gdouble) return Gdouble;
      pragma Import (C, Internal, "gtk_plot_axis_ticks_transform");
   begin
      return Internal (Get_Object (Axis), Y);
   end Axis_Ticks_Transform;

   ------------------------
   -- Axis_Ticks_Inverse --
   ------------------------

   function Axis_Ticks_Inverse
     (Axis : access Gtk_Plot_Axis_Record;
      X    : Gdouble) return Gdouble
   is
      function Internal (Axis : System.Address; X : Gdouble) return Gdouble;
      pragma Import (C, Internal, "gtk_plot_axis_ticks_inverse");
   begin
      return Internal (Get_Object (Axis), X);
   end Axis_Ticks_Inverse;

   ----------------------
   -- Axis_Parse_Label --
   ----------------------

   procedure Axis_Parse_Label
     (Axis      : access Gtk_Plot_Axis_Record;
      Val       : Gdouble;
      Precision : Gint;
      Style     : Gint;
      Label     : String)
   is
      procedure Internal
        (Axis : System.Address;
         Val : Gdouble;
         Precision, Style : Gint;
         Label : String);
      pragma Import (C, Internal, "gtk_plot_axis_parse_label");
   begin
      Internal (Get_Object (Axis), Val, Precision, Style, Label);
   end Axis_Parse_Label;

   --------------
   -- Gradient --
   --------------

   function Gradient
     (Data : access Gtk_Plot_Data_Record'Class) return Gtk_Plot_Axis
   is
      function Internal (Data : System.Address) return System.Address;
      pragma Import (C, Internal, "gtk_plot_data_gradient");
      Stub : Gtk_Plot_Axis_Record;
   begin
      return Gtk_Plot_Axis
        (Get_User_Data (Internal (Get_Object (Data)), Stub));
   end Gradient;

end Gtk.Extra.Plot;
